--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.2",
 		"@tailwindcss/vite": "^4.1.7",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.511.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.3.0",
 		"tailwindcss": "^4.1.7"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@types/node": "^22.15.19",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react": "^4.4.1",
 		"globals": "^16.0.0",
+		"tw-animate-css": "^1.3.0",
 		"typescript": "~5.8.3",
 		"vite": "^6.3.5"
 	}
