--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-dialog": "^1.1.13",
+		"@radix-ui/react-label": "^2.1.6",
 		"@radix-ui/react-slot": "^1.2.2",
 		"@tailwindcss/vite": "^4.1.7",
 		"class-variance-authority": "^0.7.1",
@@ -18,8 +20,10 @@
 		"lucide-react": "^0.511.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-hook-form": "^7.56.4",
 		"tailwind-merge": "^3.3.0",
-		"tailwindcss": "^4.1.7"
+		"tailwindcss": "^4.1.7",
+		"zod": "^3.25.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
