--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 		"@tailwindcss/vite": "^4.1.7",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"inversify": "^7.0.0-alpha.5",
 		"lucide-react": "^0.511.0",
 		"next-themes": "^0.4.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-hook-form": "^7.56.4",
+		"reflect-metadata": "^0.2.2",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.3.0",
 		"tailwindcss": "^4.1.7",
